--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <title>不動産</title>
     <link rel="icon" href="favicon.ico" />
-    <link rel="icon" type="image/png" href="/images/logo.ico" />
+    <link rel="icon" type="image/png" href="/images/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
